fixed bug that hid tab on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -365,7 +365,7 @@ input{
 
 //Ids:
 #mainTab{
-    display: none;
+    //display: none;
 }
 
 #tabType{
